--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Akshay Rishabh",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3"
   }
 }
